# VulnLLM-R

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
datasets/: cal_stats.py  clean_primevul.py  convert_long_context.py  convert_policy.py  cwe-details.csv  filter_long.py  split_data.py
plots/: plot_language_comparison_models.py  plot_model_size_scatter.py
scripts/: Readme.md  llama_models.json  models.json  other_models.json  run_codeql.sh  train_test.py
vulscan/: __init__.py
vulscan/data_process/data_utils/: add_sven_to_clean_dataset.py  arvo_to_us.py  check_cwe_correct.py  data_utils.py  filter_same_sample_for_juliet.py  generate_arvo_raw_data.py  get_cwe_stat.py  ossfuzz_to_us.py  raw_to_us.py  remove_testing_from_training.py  split_good_bad_for_juliet.py  sync_large_small.py
vulscan/data_process/generate_reasoning/: filter.py  filter_correct_predictions.py  filter_sky.py  filter_sky_simpo.py  generate.py  generate_related_cwe.py  generate_related_cwe_simple.py  parser.py  reduce_input.py  reformat.py  reformat_ds.py  reformat_ds_direct.py  run_related_cwe_example.sh  summarize_reasoning.py
vulscan/data_process/generate_rl/: generate_dpo.py  make_dpo_data.py  make_ppo_data.py
vulscan/test/: __init__.py  generate_constitution.py  gpu_monitor.py  run_test.sh  run_test_no_policy.sh  run_test_no_policy_scaling.sh  test.py  test_existing_json.py  test_rl_filter.py
vulscan/test/test_utils/: __init__.py  utils.py  (+3 more)
vulscan/train/: train.py
vulscan/utils/: cwes.py  get_cwe_info.py  project_info.py  sys_prompts.py
(+201 files in other folders)
